# releng-python-one-password

./: .coveragerc  .eslintrc.toml  .flake8  .gitignore  .pdm-python  .pre-commit-config.yaml  .readthedocs.yml  .yamllint  AUTHORS  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  caching.py  credential.py  credentials.py  functions.py  license-header.txt  project.config  pyproject.toml  requirements.txt  setup.cfg  setup.py  tags.py  tox.ini
.github/workflows/: builds.yaml  gerrit-verify.yaml  security.yaml  test-release.yaml  testing.yaml
docs/: requirements.txt
scripts/: mypy-deps.sh  tomllint.sh
src/python_one_password/: __init__.py  caching.py  cli.py  credentials.py  functions.py  tags.py
tests/: test_python_one_password.py
