[metadata]
name = python-one-password
author = LF Releng
author_email = mwatkins@linuxfoundation.org
summary = Linux Foundation Release Engineering Tools
description_file = README.md
description_content_type = text/x-rst; charset=UTF-8
home_page = https://github.com/linuxfoundation-it/python-one-password
project_urls =
    Bug Tracker = https://jira.linuxfoundation.org
    Documentation = https://github.com/linuxfoundation-it/python-one-password/README.md
    Source Code = https://github.com/linuxfoundation-it/python-one-password
license = EPL-1.0
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Eclipse Public License 1.0 (EPL-1.0)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[wheel]
universal = 1

[extras]

[files]
packages = credentials.py

[entry_points]
console_scripts =
    python-one-password = credentials.py:main
